Frontier-specific ion storm entries

--- a/Resources/Prototypes/Datasets/ion_storm.yml
+++ b/Resources/Prototypes/Datasets/ion_storm.yml
@@ -190,6 +190,10 @@
   - SPACE
   - SUNLIGHT
   - WATER
+  # Frontier
+  - SILENCE
+  - WAITING IN LINE
+  # End Frontier
 
 # Severity is how bad the allergy is.
 - type: dataset
@@ -211,7 +215,7 @@
   - AN ALTERNATE DIMENSION
   - AN ALTERNATE UNIVERSE
 #  - ATMOSPHERICS
-  - BOTANY
+#  - BOTANY
 #  - BRAZIL
 #  - CANADA
   - CENTCOMM
@@ -249,6 +253,23 @@
   - THE UNIVERSE
   - URANUS
   - VENUS
+  # Frontier
+  - FRONTIER OUTPOST
+  - NFSD OUTPOST
+  - EXPEDITIONARY LODGE
+  - THE TRADE OUTPOST
+  - THE CARGO DEPOTS
+  - GRIFTY'S
+  - CRAZY CASEY'S
+  - EVERY SHUTTLE
+  - A SHUTTLE
+  - THE SR'S OFFICE
+  - TINNIA'S REST
+  - THE COURTHOUSE
+  - MCCARGO
+  - THE OMNICHURCH
+  - BAHAMA MAMA'S
+  # End Frontier
 
 # Abstract concepts for the law holder to decide on it's own definition of.
 - type: dataset
@@ -310,6 +331,17 @@
   - TIME
   - WEALTHINESS
   - WONDER
+  # Frontier
+  - SMUGGLING
+  - CRISPINESS
+  - HIERARCHY
+  - PHILOSOPHY
+  - SCARCITY
+  - ABUNDANCE
+  - PERFECTION
+  - NOTHINGNESS
+  - SILENCE
+  # End Frontier
 
 # Crew is any specific job. Using jobs instead of specific crewmembers since "THE CLOWN" is easier than
 # seeing "JOHN SMITH" and having to figure out who john smith is.
@@ -322,7 +354,7 @@
   - BARTENDERS
   - BOTANISTS
   - CAPTAINS
-#  - CAPTAINS AND HEADS OF STAFF
+  # - CAPTAINS AND HEADS OF STAFF
   - CARGO TECHNICIANS
   - CHAPLAINS
   - CHEFS
@@ -334,9 +366,9 @@
   - CYBORGS
   - DETECTIVES
   # - GENETICISTS
-  - STATION REPRESENTATIVES
-  - SHERIFFS
-#  - HEADS OF STAFF
+  # - HEADS OF PERSONNEL
+  # - HEADS OF SECURITY
+  # - HEADS OF STAFF
   - JANITORS
   - LAWYERS
   - LIBRARIANS
@@ -345,7 +377,7 @@
   - MUSICIANS
   - NON-CREW
   - PARAMEDICS
-  - PASSENGERS
+  # - PASSENGERS
   - QUARTERMASTERS
   - RESEARCH DIRECTORS
   - ROBOTICISTS
@@ -355,7 +387,24 @@
   - SECURITY OFFICERS
   - ENGINEERS
   # - VIROLOGISTS
+  # - WARDENS
+  # Frontier
+  - CONTRACTORS
+  - PILOTS
+  - MERCENARIES
+  - VALETS
+  - MAIL CARRIERS
+  - STATION TRAFFIC CONTROLLERS
+  - STATION GUARDS
+  - STATION REPRESENTATIVES
+  - CADETS
+  - PUBLIC AFFAIRS LIAISONS
+  - DEPUTIES
+  - SERGEANTS
   - BAILIFFS
+  - SHERIFFS
+  - MEMBERS OF SECTOR COMMAND
+  # End Frontier
 
 # only including complex dangerous or funny drinks no water allowed
 - type: dataset
@@ -377,6 +426,12 @@
   - SPACE LUBE
 #  - SULFURIC ACID
 #  - WELDING FUEL
+  # Frontier
+  - RED BOOL
+  - PINK DRINK
+  - SWEETEST AMBROSIA
+  - LIQUID GOLD
+  # End Frontier
 
 - type: dataset
   id: IonStormFeelings
@@ -430,6 +485,10 @@
   - WANT
   - WORSHIP
 #  - WOULD KILL FOR
+  # Frontier
+  - COULD REALLY USE
+  - HADN'T EVEN THOUGHT ABOUT
+  # End Frontier
 
 # only including complex dangerous or funny food no apples
 - type: dataset
@@ -457,6 +516,14 @@
   - STEEL
   - SUPPERMATTER
 #  - URANIUM
+  # Frontier
+  - DONK POCKET CASSEROLE
+  - HANDMADE DONUTS
+  - THREE COURSE MEALS
+  - SASHIMI PLATTERS
+  - TOWERING BURGERS
+  - HAIRBALLS
+  # End Frontier
 
 # Musts are funny things the law holder or crew has to do.
 - type: dataset
@@ -558,6 +625,9 @@
   - THREE
   - TWENTY
   - TWO
+  # Frontier
+  - FOURTEEN
+  # End Frontier
 
 - type: dataset
   id: IonStormNumberMod
@@ -570,6 +640,11 @@
   - QUADRILLION
   - THOUSAND
   - TRILLION
+  # Frontier
+  - OR SO
+  - OR MORE
+  - REPTILLION
+  # End Frontier
 
 # Objects are anything that can be found on the station or elsewhere, plural.
 - type: dataset
@@ -629,7 +704,7 @@
   - ENGINES
   - EQUIPMENT
   - ERRORS
-#  - EXTERMINATORS 
+#  - EXTERMINATORS
   - EXPLOSIVES
   - EYEWEAR
   - FEDORAS
@@ -807,7 +882,7 @@
   - SOMEONE TO TUCK YOU IN
   - SOMEONE WHO KNOWS HOW TO PILOT A SPACE STATION
   - SOMETHING BUT YOU AREN'T SURE WHAT
-  - THAT GRIEFING TRAITOR GEORGE MELONS
+  # - THAT GRIEFING TRAITOR GEORGE MELONS
   - THAT HEDGEHOG
   - THE CLOWN
   - THE DARK KNIGHT
@@ -837,6 +912,18 @@
   - TO UNDERSTAND UNDERSTAND, UNDERSTAND UNDERSTAND, UNDERSTAND UNDERSTAND THE CONCEPT OF LOVE
   - TRAITORS
   - VEGETABLES
+  # Frontier
+  - DUFFELBAG BUDDIES
+  - THE GREAT SPACE GOBLINATE
+  - A HOME WHERE THE SHARKMINNOW ROAM
+  - TO DELIVER EVERY LETTER
+  - AN ASTEROID MADE OF MEAT
+  - MORE PLUSHIES
+  - TO MAKE THE MOTHER OF ALL OMELETTES
+  - TO MINE FOR FISH
+  - TO GO ON SAFARI
+  - TO GO TO MCCARGO
+  # End Frontier
 
 # Species, for when the law holder has to commit genocide. Plural.
 - type: dataset
@@ -851,11 +938,16 @@
   - MONKEYS
   - SLIME PEOPLE
   - SKELETONS
-  - ONI # Frontier
-  - GOBLINS # Frontier
-  - HARPIES # Frontier
-  - VULPS # Frontier
-  - FELINIDS # Frontier
+  # Frontier
+  - ONI
+  - GOBLINS
+  - HARPIES
+  - VULPS
+  - FELINIDS
+  - KOBOLDS
+  - DWARVES
+  - GOOBERS
+  # End Frontier
 
 # Specific actions that either harm humans or must be done to not
 # harm humans. Make sure they're plural and "not" can be tacked
@@ -918,6 +1010,11 @@
   - USING THE BATHROOM
   - WASTING WATER
   - WRITING
+  # Frontier
+  - PUBLISHING NEWS STORIES
+  - RUNNING A SUCCESSFUL BUSINESS
+  - WALKIN' HERE
+  # End Frontier
 
 # Threats are generally bad things, silly or otherwise. Plural.
 - type: dataset
@@ -971,7 +1068,7 @@
   - REVENANTS
   - ROGUE CYBORGS
   - SERIAL KILLERS
-  - SHIT SECURITY OFFICERS
+  # - SHIT SECURITY OFFICERS
   - SINGULARITIES
   - SKELETONS
   - SLIMES
@@ -997,6 +1094,15 @@
   - XENOS
   - ZOMBIES
   - ZOMBIE MICE
+  # Frontier
+  - HEAD-ON COLLISIONS
+  - PUNKS
+  - SCAVENGERS
+  - CLEAN HALLWAYS
+  - UNSAFE STORAGE CONDITIONS
+  - BUREAUCRATS
+  - STOWAWAYS
+  # End Frontier
 
 - type: dataset
   id: IonStormVerbs
@@ -1025,3 +1131,12 @@
   - SPYING ON
   - STALKING
   - WATCHING
+  # Frontier
+  - TALKING TO
+  - INTERVIEWING
+  - WORSHIPPING
+  - DRIVING
+  - PILOTING
+  - BEFRIENDING
+  - BEEPING AT
+  # End Frontier
