--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
@@ -68,6 +68,7 @@
       - SpaceGarbage
       - Log
       - Cartridge # PDA app cartriges
+      - SpawnItemsOnUse # Frontier: TODO remove this when bug fix
       tags:
       - Trash
       - Recyclable
