--- a/Resources/Prototypes/Entities/Structures/Machines/recycler.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/recycler.yml
@@ -69,14 +69,22 @@
       - PhysicalComposition
       - MobState
       - SpaceGarbage
+      - Log # Frontier
+      - Cartridge # Frontier: PDA app cartriges
+      - SpawnItemsOnUse # Frontier: TODO remove this when bug fix
       tags:
       - Trash
       - Recyclable
+      - Cartridge # Frontier: Bullets
+      - Book # Frontier
+      - Pen # Frontier
+      - Handcuffs # Frontier
     blacklist:
       components:
       - Material
       - Pda
       - IdCard
+      - Brain # Frontier
       tags:
       - HighRiskItem
     sound:
