--- a/Resources/Maps/_NF/Shuttles/Scrap/scrap-hauler.yml
+++ b/Resources/Maps/_NF/Shuttles/Scrap/scrap-hauler.yml
@@ -3927,6 +3927,102 @@ entities:
     - type: Transform
       pos: -1.5,2.5
       parent: 1
+- proto: SpawnMobXenoT1
+  entities:
+  - uid: 41
+    components:
+    - type: Transform
+      pos: 1.5,1.5
+      parent: 1
+  - uid: 44
+    components:
+    - type: Transform
+      pos: -2.5,9.5
+      parent: 1
+  - uid: 60
+    components:
+    - type: Transform
+      pos: 4.5,12.5
+      parent: 1
+  - uid: 75
+    components:
+    - type: Transform
+      pos: -1.5,28.5
+      parent: 1
+  - uid: 82
+    components:
+    - type: Transform
+      pos: 0.5,10.5
+      parent: 1
+  - uid: 85
+    components:
+    - type: Transform
+      pos: 3.5,19.5
+      parent: 1
+  - uid: 155
+    components:
+    - type: Transform
+      pos: -4.5,19.5
+      parent: 1
+  - uid: 209
+    components:
+    - type: Transform
+      pos: -0.5,17.5
+      parent: 1
+  - uid: 246
+    components:
+    - type: Transform
+      pos: -3.5,13.5
+      parent: 1
+- proto: SpawnMobXenoT2
+  entities:
+  - uid: 47
+    components:
+    - type: Transform
+      pos: 0.5,2.5
+      parent: 1
+  - uid: 53
+    components:
+    - type: Transform
+      pos: 4.5,-0.5
+      parent: 1
+  - uid: 54
+    components:
+    - type: Transform
+      pos: 1.5,26.5
+      parent: 1
+  - uid: 67
+    components:
+    - type: Transform
+      pos: 0.5,14.5
+      parent: 1
+  - uid: 200
+    components:
+    - type: Transform
+      pos: 1.5,17.5
+      parent: 1
+- proto: SpawnMobXenoT3
+  entities:
+  - uid: 48
+    components:
+    - type: Transform
+      pos: -1.5,22.5
+      parent: 1
+  - uid: 51
+    components:
+    - type: Transform
+      pos: 4.5,9.5
+      parent: 1
+  - uid: 72
+    components:
+    - type: Transform
+      pos: 1.5,29.5
+      parent: 1
+  - uid: 210
+    components:
+    - type: Transform
+      pos: 1.5,5.5
+      parent: 1
 - proto: StoolBar
   entities:
   - uid: 178
@@ -4936,108 +5032,5 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 3.5,21.5
-      parent: 1
-- proto: XenoAISpawnerEasy
-  entities:
-  - uid: 41
-    components:
-    - type: Transform
-      pos: 1.5,1.5
-      parent: 1
-  - uid: 44
-    components:
-    - type: Transform
-      pos: -2.5,9.5
-      parent: 1
-  - uid: 60
-    components:
-    - type: Transform
-      pos: 4.5,12.5
-      parent: 1
-  - uid: 75
-    components:
-    - type: Transform
-      pos: -1.5,28.5
-      parent: 1
-  - uid: 82
-    components:
-    - type: Transform
-      pos: 0.5,10.5
-      parent: 1
-  - uid: 85
-    components:
-    - type: Transform
-      pos: 3.5,19.5
-      parent: 1
-  - uid: 155
-    components:
-    - type: Transform
-      pos: -4.5,19.5
-      parent: 1
-  - uid: 209
-    components:
-    - type: Transform
-      pos: -0.5,17.5
-      parent: 1
-  - uid: 246
-    components:
-    - type: Transform
-      pos: -3.5,13.5
-      parent: 1
-- proto: XenoAISpawnerHard
-  entities:
-  - uid: 48
-    components:
-    - type: Transform
-      pos: -1.5,22.5
-      parent: 1
-  - uid: 51
-    components:
-    - type: Transform
-      pos: 4.5,9.5
-      parent: 1
-  - uid: 72
-    components:
-    - type: Transform
-      pos: 1.5,29.5
-      parent: 1
-  - uid: 210
-    components:
-    - type: Transform
-      pos: 1.5,5.5
-      parent: 1
-- proto: XenoAISpawnerMedium
-  entities:
-  - uid: 47
-    components:
-    - type: Transform
-      pos: 0.5,2.5
-      parent: 1
-  - uid: 53
-    components:
-    - type: Transform
-      pos: 4.5,-0.5
-      parent: 1
-  - uid: 54
-    components:
-    - type: Transform
-      pos: 1.5,26.5
-      parent: 1
-  - uid: 67
-    components:
-    - type: Transform
-      pos: 0.5,14.5
-      parent: 1
-  - uid: 200
-    components:
-    - type: Transform
-      pos: 1.5,17.5
-      parent: 1
-- proto: XenoAISpawnerQueen
-  entities:
-  - uid: 96
-    components:
-    - type: Transform
-      pos: 0.5,12.5
       parent: 1
 ...
