Resolved YAML failures. Inconsistent wording on some labels.

--- a/Resources/Prototypes/Research/arsenal.yml
+++ b/Resources/Prototypes/Research/arsenal.yml
@@ -106,6 +106,7 @@
   - TelescopicShield
   - HoloprojectorSecurity
   - WeaponDisablerSMG
+  - NFBlueprintTelescopicShield #Frontier
 
 - type: technology
   id: ExplosiveTechnology
