--- a/Resources/Prototypes/_NF/Research/arsenal.yml
+++ b/Resources/Prototypes/_NF/Research/arsenal.yml
@@ -21,8 +21,8 @@
   - WeaponShotgunKammererNF
   - ForensicPad
   - FlashlightSecliteNF
-  - NFBlueprintWeaponShotgunKammererNF
-  - NFBlueprinthandcuffs
+  - NFBlueprintWeaponShotgunKammererNF #Frontier
+  - NFBlueprintHandcuffs #Frontier
   technologyPrerequisites:
   - AdvancedRiotControl
 
