New wall sign and mom guidebook update. Bank prep phase.

--- a/Resources/Prototypes/_NF/Guidebook/medical.yml
+++ b/Resources/Prototypes/_NF/Guidebook/medical.yml
@@ -2,3 +2,8 @@
   id: MedicalBounties
   name: guide-entry-medical-bounties
   text: "/ServerInfo/_NF/Guidebook/Medical/MedicalBounties.xml"
+
+- type: guideEntry
+  id: MedicalOperationsManager
+  name: guide-entry-medical-mom
+  text: "/ServerInfo/_NF/Guidebook/Medical/Mom.xml"
