--- a/Resources/Prototypes/_NF/Roles/Jobs/Medical/mom.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Medical/mom.yml
@@ -32,6 +32,7 @@
   id: MomGear
   equipment:
     pocket1: WeaponDisabler
+    pocket2: MedicalAppraisalTool
   storage:
     back:
     - RubberStampMom 
