--- a/Resources/Prototypes/Guidebook/medical.yml
+++ b/Resources/Prototypes/Guidebook/medical.yml
@@ -3,6 +3,7 @@
   name: guide-entry-medical
   text: "/ServerInfo/Guidebook/Medical/Medical.xml"
   children:
+  - MedicalOperationsManager # Frontier
   - Medical Doctor
   - Chemist
   - Cloning
