--- a/Resources/Prototypes/_NF/Entities/Stations/base.yml
+++ b/Resources/Prototypes/_NF/Entities/Stations/base.yml
@@ -97,10 +97,9 @@
       - Storage # Till fixed
       - StorageFill # Till fixed
       - ContainerContainer # Till fixed
-    overrideList:
-      matchParents: true
-      id:
-      - SheetUranium # Counts as food
+    whitelistOverride:
+      components:
+      - UraniumMaterials # Counts as food
 
 - type: entity
   id: BaseStationDeadDrops
