Pirate bounty touchups, humanprofileeditor

--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -126,6 +126,8 @@
   - type: StaticPrice # Frontier
     price: 20 # Frontier: The card need to cost less then the PDA that comes with a card and a pen in it.
   - type: CargoSellBlacklist # Frontier: Liltenhead moment
+  - type: PirateBountyItem
+    id: Pda
 
 - type: entity
   parent: BasePDA
