--- a/Resources/Prototypes/Entities/Objects/Misc/fire_extinguisher.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/fire_extinguisher.yml
@@ -74,6 +74,8 @@
   - type: PhysicalComposition
     materialComposition:
       Steel: 100
+  - type: PirateBountyItem # Frontier
+    id: FireExtinguisher # Frontier
 
 - type: entity
   name: extinguisher spray
