--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/defib.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/defib.yml
@@ -47,6 +47,8 @@
     - type: GuideHelp
       guides:
       - Medical Doctor
+    - type: PirateBountyItem # Frontier
+      id: Defibrillator # Frontier
 
 - type: entity
   id: Defibrillator
