--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -110,6 +110,8 @@
     taxAccounts: # Frontier
       Frontier: 0.25 # Frontier
       Nfsd: 0.15 # Frontier
+  - type: PirateBountyItem # Frontier
+    id: VendingMachine # Frontier
 
 - type: entity
   parent: VendingMachine
