--- a/Resources/Prototypes/Entities/Structures/hydro_tray.yml
+++ b/Resources/Prototypes/Entities/Structures/hydro_tray.yml
@@ -99,6 +99,8 @@
     guides:
     - Botany
     - Chemicals
+  - type: PirateBountyItem # Frontier
+    id: HydroponicsTray # Frontier
 
 - type: entity
   parent: hydroponicsTray
