mail component fix, ID field name

--- a/Resources/Prototypes/Nyanotrasen/Entities/Objects/Specific/Mail/base_mail.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Objects/Specific/Mail/base_mail.yml
@@ -95,7 +95,7 @@
         Blunt: 10
   - type: CargoSellBlacklist # Frontier
   - type: PirateBountyItem
-    category: Mail
+    id: Mail
 
 # This empty parcel is allowed to exist and evade the tests for the admin
 # mailto command.
