--- a/Resources/Prototypes/_NF/Entities/Stations/base.yml
+++ b/Resources/Prototypes/_NF/Entities/Stations/base.yml
@@ -57,7 +57,6 @@
       - Metal
       - Ingot
       - RawMaterial
-      - ClothMade
       - CrystalRed
       - CrystalGreen
       - CrystalPink
@@ -71,6 +70,8 @@
       - MachinePart
       - VendingMachineRestock
       - Seed
+      - MachineBoard
+      - ComputerBoard
     blacklist:
       tags:
       - Trash
@@ -96,7 +97,6 @@
       - RCD # Dup charges
       - Storage # Till fixed
       - StorageFill # Till fixed
-      - ContainerContainer # Till fixed
     whitelistOverride:
       components:
       - UraniumMaterials # Counts as food
