--- a/Resources/Prototypes/_NF/Roles/Jobs/Medical/mom.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Medical/mom.yml
@@ -35,4 +35,5 @@
     pocket2: MedicalAppraisalTool
   storage:
     back:
-    - RubberStampMom 
+    - RubberStampMom
+    - BoxFolderMedicalDoctor
