--- a/Resources/Prototypes/Body/Organs/moth.yml
+++ b/Resources/Prototypes/Body/Organs/moth.yml
@@ -4,12 +4,11 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: Stomach
-    # specialDigestible: # Frontier
-    #   tags: # Frontier
-    #   - MothFood # Frontier
-    #   - Fruit # Frontier
-    #   - Pill # Frontier
-    #   - Crayon # Frontier
+    specialDigestible: # Frontier
+      tags:
+      # - ClothMade # Frontier
+      # - Paper # Frontier
+      - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
       stomach:
