--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/bread.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/bread.yml
@@ -145,6 +145,7 @@
     tags:
     - ClothMade
     - Bread
+    - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
@@ -175,6 +176,7 @@
     - ClothMade
     - Bread
     - Slice
+    - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
