--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/pizza.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/pizza.yml
@@ -660,6 +660,7 @@
     tags:
     - ClothMade
     - Pizza
+    - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
@@ -690,6 +691,9 @@
     - ClothMade
     - Pizza
     - Slice
+    - MothFood # Frontier
+  - type: Food # Frontier
+    requiresSpecialDigestion: true # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
