--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -2466,6 +2466,7 @@
     tags:
     - ClothMade
     - CottonBoll
+    - MothFood # Frontier
 
 - type: entity
   name: pyrotton boll
@@ -2497,6 +2498,7 @@
     tags:
     - ClothMade
     - CottonBoll
+    - MothFood # Frontier
   - type: Extractable
     grindableSolutionName: food
 
