--- a/Resources/Prototypes/Entities/Objects/Materials/materials.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/materials.yml
@@ -434,7 +434,7 @@
         Quantity: 3
   - type: Tag
     tags:
-      - MothFood
+      - MothFood # Frontier
       - DroneUsable
       - ClothMade
       - RawMaterial
