--- a/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/moth.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/moth.yml
@@ -538,6 +538,11 @@
           Quantity: 6
         - ReagentId: Water
           Quantity: 4
+  - type: Tag
+    tags:
+    - MothFood
+  - type: Food
+    requiresSpecialDigestion: true
 #Tastes like cotton and broth
 
 - type: entity
@@ -910,6 +915,11 @@
           Quantity: 8
         - ReagentId: Vitamin
           Quantity: 6
+  - type: Tag
+    tags:
+    - MothFood
+  - type: Food
+    requiresSpecialDigestion: true
 #Tastes like cheese, salad and bread
 
 - type: entity
@@ -1093,7 +1103,7 @@
 # Tastes like crust, pesto, cheese
 
 - type: entity
-  name: cotton pizza
+  name: cheese cotton pizza
   parent: FoodPizzaBase
   id: FoodMothPizzaCotton
   description: A crime to some, a delicious pizza to others. Cotton and cheese.
@@ -1108,9 +1118,14 @@
   - type: Sprite
     sprite: Nyanotrasen/Objects/Consumable/Food/moth.rsi
     state: pizza-cotton
+  - type: Tag
+    tags:
+    - MothFood
+  - type: Food
+    requiresSpecialDigestion: true
 
 - type: entity
-  name: slice of cotton pizza
+  name: slice of cheese cotton pizza
   parent: FoodPizzaSliceBase
   id: FoodMothPizzaCottonSlice
   description: White as a sheet of paper.
@@ -1123,6 +1138,11 @@
   - type: Sprite
     sprite: Nyanotrasen/Objects/Consumable/Food/moth.rsi
     state: pizza-cotton-slice
+  - type: Tag
+    tags:
+    - MothFood
+  - type: Food
+    requiresSpecialDigestion: true
 # Tastes like crust, cotton, cheese
 
 # Sweets
@@ -1180,7 +1200,13 @@
           Quantity: 10
         - ReagentId: Sugar
           Quantity: 10
-  # Frontier - Removed Moth requirement
+  - type: Tag
+    tags:
+    - MothFood
+  # Frontier: edible without special requirements
+  # - type: Food
+  #   requiresSpecialDigestion: true
+  # End Frontier
 #Tastes like vanilla and clouds.
 
 - type: entity
@@ -1206,7 +1232,13 @@
           Quantity: 4
         - ReagentId: Sugar
           Quantity: 2
-  # Frontier - Removed Moth requirement
+  - type: Tag
+    tags:
+    - MothFood
+  # Frontier: edible without special requirements
+  # - type: Food
+  #   requiresSpecialDigestion: true
+  # End Frontier
 #Tastes like vanilla and clouds.
 
 - type: entity
@@ -1243,5 +1275,10 @@
           Quantity: 5
         - ReagentId: Vitamin
           Quantity: 1
-  # Frontier - Removed Moth requirement
+  - type: Tag
+    tags:
+    - MothFood
+  - type: Food
+    requiresSpecialDigestion: true
+
 #Tastes like muffin, dust and lint
