MothFood component, flavor "like cotton"

--- a/Resources/Prototypes/Body/Organs/moth.yml
+++ b/Resources/Prototypes/Body/Organs/moth.yml
@@ -4,10 +4,11 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: Stomach
-    specialDigestible: # Frontier
-      tags:
+    specialDigestible:
+      # tags: # Frontier
       # - ClothMade # Frontier
       # - Paper # Frontier
+      components: # Frontier
       - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
