--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/pizza.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/pizza.yml
@@ -660,7 +660,6 @@
     tags:
     - ClothMade
     - Pizza
-    - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
@@ -672,6 +671,7 @@
           Quantity: 5
         - ReagentId: Fiber
           Quantity: 10
+  - type: MothFood # Frontier
 
 - type: entity
   name: slice of cotton pizza
@@ -691,7 +691,6 @@
     - ClothMade
     - Pizza
     - Slice
-    - MothFood # Frontier
   - type: Food # Frontier
     requiresSpecialDigestion: true # Frontier
   - type: SolutionContainerManager
@@ -705,3 +704,4 @@
           Quantity: 0.8
         - ReagentId: Fiber
           Quantity: 1.5
+  - type: MothFood # Frontier
