--- a/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/moth.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/moth.yml
@@ -538,11 +538,9 @@
           Quantity: 6
         - ReagentId: Water
           Quantity: 4
-  - type: Tag
-    tags:
-    - MothFood
   - type: Food
     requiresSpecialDigestion: true
+  - type: MothFood # Frontier
 #Tastes like cotton and broth
 
 - type: entity
@@ -915,11 +913,9 @@
           Quantity: 8
         - ReagentId: Vitamin
           Quantity: 6
-  - type: Tag
-    tags:
-    - MothFood
   - type: Food
     requiresSpecialDigestion: true
+  - type: MothFood # Frontier
 #Tastes like cheese, salad and bread
 
 - type: entity
@@ -1118,11 +1114,9 @@
   - type: Sprite
     sprite: Nyanotrasen/Objects/Consumable/Food/moth.rsi
     state: pizza-cotton
-  - type: Tag
-    tags:
-    - MothFood
   - type: Food
     requiresSpecialDigestion: true
+  - type: MothFood # Frontier
 
 - type: entity
   name: slice of cheese cotton pizza
@@ -1138,11 +1132,9 @@
   - type: Sprite
     sprite: Nyanotrasen/Objects/Consumable/Food/moth.rsi
     state: pizza-cotton-slice
-  - type: Tag
-    tags:
-    - MothFood
   - type: Food
     requiresSpecialDigestion: true
+  - type: MothFood # Frontier
 # Tastes like crust, cotton, cheese
 
 # Sweets
@@ -1200,9 +1192,7 @@
           Quantity: 10
         - ReagentId: Sugar
           Quantity: 10
-  - type: Tag
-    tags:
-    - MothFood
+  - type: MothFood # Frontier
   # Frontier: edible without special requirements
   # - type: Food
   #   requiresSpecialDigestion: true
@@ -1232,9 +1222,7 @@
           Quantity: 4
         - ReagentId: Sugar
           Quantity: 2
-  - type: Tag
-    tags:
-    - MothFood
+  - type: MothFood # Frontier
   # Frontier: edible without special requirements
   # - type: Food
   #   requiresSpecialDigestion: true
@@ -1275,9 +1263,7 @@
           Quantity: 5
         - ReagentId: Vitamin
           Quantity: 1
-  - type: Tag
-    tags:
-    - MothFood
+  - type: MothFood # Frontier
   - type: Food
     requiresSpecialDigestion: true
 
