--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/bread.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/bread.yml
@@ -145,7 +145,6 @@
     tags:
     - ClothMade
     - Bread
-    - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
@@ -155,6 +154,7 @@
           Quantity: 10
         - ReagentId: Fiber
           Quantity: 10
+  - type: MothFood # Frontier
 
 - type: entity
   name: cotton bread slice
@@ -176,7 +176,6 @@
     - ClothMade
     - Bread
     - Slice
-    - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
@@ -186,6 +185,7 @@
           Quantity: 2
         - ReagentId: Fiber
           Quantity: 2
+  - type: MothFood # Frontier
 
 - type: entity
   name: cornbread
