--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -436,7 +436,6 @@
     tags:
     - Ingredient
     - ClothMade
-    - MothFood # Frontier
   - type: Food # Frontier
     requiresSpecialDigestion: true # Frontier
   - type: SolutionContainerManager
@@ -448,6 +447,7 @@
           Quantity: 5
         - ReagentId: Fiber
           Quantity: 10
+  - type: MothFood # Frontier
 
 - type: entity
   name: raw pastry base
@@ -506,11 +506,9 @@
   - type: Construction
     graph: CottonPizza
     node: flat
-  - type: Tag
-    tags: # Frontier
-    - MothFood # Frontier
   - type: Food # Frontier
-    requiresSpecialDigestion: true
+    requiresSpecialDigestion: true # Frontier
+  - type: MothFood # Frontier
 
 - type: entity
   name: pizza bread
