--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -944,7 +944,6 @@
   - type: Tag
     tags:
     - Fruit # Fuck you they're a fruit
-    - BloodFood
     - Vegetable
   - type: FoodSequenceElement
     entries:
@@ -2466,7 +2465,7 @@
     tags:
     - ClothMade
     - CottonBoll
-    - MothFood # Frontier
+  - type: MothFood # Frontier
 
 - type: entity
   name: pyrotton boll
@@ -2498,9 +2497,9 @@
     tags:
     - ClothMade
     - CottonBoll
-    - MothFood # Frontier
   - type: Extractable
     grindableSolutionName: food
+  - type: MothFood # Frontier
 
 - type: entity
   name: cherry
