--- a/Resources/Maps/_NF/POI/medical.yml
+++ b/Resources/Maps/_NF/POI/medical.yml
@@ -2730,12 +2730,19 @@ entities:
     - type: Transform
       pos: -4.2593822,7.9931407
       parent: 1
+- proto: BoxColoredNavigationLighttube
+  entities:
+  - uid: 1701
+    components:
+    - type: Transform
+      pos: 9.670095,7.529811
+      parent: 1
 - proto: Bucket
   entities:
   - uid: 298
     components:
     - type: Transform
-      pos: 9.4616995,7.623142
+      pos: 9.40447,6.811061
       parent: 1
 - proto: ButtonFrameGrey
   entities:
@@ -2838,6 +2845,26 @@ entities:
     components:
     - type: Transform
       pos: 6.5,-8.5
+      parent: 1
+  - uid: 1230
+    components:
+    - type: Transform
+      pos: -6.5,13.5
+      parent: 1
+  - uid: 1248
+    components:
+    - type: Transform
+      pos: -6.5,11.5
+      parent: 1
+  - uid: 1257
+    components:
+    - type: Transform
+      pos: -3.5,22.5
+      parent: 1
+  - uid: 1274
+    components:
+    - type: Transform
+      pos: -1.5,22.5
       parent: 1
   - uid: 1290
     components:
@@ -3774,6 +3801,11 @@ entities:
     - type: Transform
       pos: 11.5,-2.5
       parent: 1
+  - uid: 1537
+    components:
+    - type: Transform
+      pos: 6.5,22.5
+      parent: 1
   - uid: 1599
     components:
     - type: Transform
@@ -3798,6 +3830,81 @@ entities:
     components:
     - type: Transform
       pos: 8.5,3.5
+      parent: 1
+  - uid: 1686
+    components:
+    - type: Transform
+      pos: 8.5,22.5
+      parent: 1
+  - uid: 1687
+    components:
+    - type: Transform
+      pos: 11.5,13.5
+      parent: 1
+  - uid: 1688
+    components:
+    - type: Transform
+      pos: 11.5,11.5
+      parent: 1
+  - uid: 1689
+    components:
+    - type: Transform
+      pos: 11.5,-16.5
+      parent: 1
+  - uid: 1690
+    components:
+    - type: Transform
+      pos: 11.5,-18.5
+      parent: 1
+  - uid: 1691
+    components:
+    - type: Transform
+      pos: 8.5,-27.5
+      parent: 1
+  - uid: 1692
+    components:
+    - type: Transform
+      pos: 6.5,-27.5
+      parent: 1
+  - uid: 1693
+    components:
+    - type: Transform
+      pos: -1.5,-27.5
+      parent: 1
+  - uid: 1694
+    components:
+    - type: Transform
+      pos: -3.5,-27.5
+      parent: 1
+  - uid: 1695
+    components:
+    - type: Transform
+      pos: -6.5,-18.5
+      parent: 1
+  - uid: 1696
+    components:
+    - type: Transform
+      pos: -6.5,-16.5
+      parent: 1
+  - uid: 1697
+    components:
+    - type: Transform
+      pos: 8.5,8.5
+      parent: 1
+  - uid: 1698
+    components:
+    - type: Transform
+      pos: 8.5,7.5
+      parent: 1
+  - uid: 1699
+    components:
+    - type: Transform
+      pos: 8.5,6.5
+      parent: 1
+  - uid: 1700
+    components:
+    - type: Transform
+      pos: 8.5,5.5
       parent: 1
 - proto: CableHV
   entities:
