--- a/Resources/Maps/_NF/POI/trade.yml
+++ b/Resources/Maps/_NF/POI/trade.yml
@@ -3140,11 +3140,15 @@ entities:
     - type: Transform
       pos: -2.5,-15.5
       parent: 1
+    - type: Docking
+      name: dock-label-trade-seven
   - uid: 219
     components:
     - type: Transform
       pos: -3.5,-15.5
       parent: 1
+    - type: Docking
+      name: dock-label-trade-seven
 - proto: AirlockFrontierBridgeGlassLocked
   entities:
   - uid: 2620
@@ -3467,7 +3471,7 @@ entities:
       pos: 55.5,29.5
       parent: 1
     - type: Docking
-      name: CB1
+      name: dock-label-trade-cargo-bay-one
   - uid: 222
     components:
     - type: Transform
@@ -3475,7 +3479,7 @@ entities:
       pos: 56.5,29.5
       parent: 1
     - type: Docking
-      name: CB1
+      name: dock-label-trade-cargo-bay-one
   - uid: 223
     components:
     - type: Transform
@@ -3483,7 +3487,7 @@ entities:
       pos: 57.5,29.5
       parent: 1
     - type: Docking
-      name: CB1
+      name: dock-label-trade-cargo-bay-one
   - uid: 809
     components:
     - type: Transform
@@ -3491,7 +3495,7 @@ entities:
       pos: 88.5,0.5
       parent: 1
     - type: Docking
-      name: CB2
+      name: dock-label-trade-cargo-bay-two
   - uid: 810
     components:
     - type: Transform
@@ -3499,7 +3503,7 @@ entities:
       pos: 88.5,-0.5
       parent: 1
     - type: Docking
-      name: CB2
+      name: dock-label-trade-cargo-bay-two
   - uid: 811
     components:
     - type: Transform
@@ -3507,49 +3511,49 @@ entities:
       pos: 88.5,-1.5
       parent: 1
     - type: Docking
-      name: CB2
+      name: dock-label-trade-cargo-bay-two
   - uid: 1006
     components:
     - type: Transform
       pos: 74.5,-22.5
       parent: 1
     - type: Docking
-      name: D6
+      name: dock-label-trade-six
   - uid: 1014
     components:
     - type: Transform
       pos: 75.5,-22.5
       parent: 1
     - type: Docking
-      name: D6
+      name: dock-label-trade-six
   - uid: 1015
     components:
     - type: Transform
       pos: 76.5,-22.5
       parent: 1
     - type: Docking
-      name: D6
+      name: dock-label-trade-six
   - uid: 3695
     components:
     - type: Transform
       pos: 13.5,-25.5
       parent: 1
     - type: Docking
-      name: CB3
+      name: dock-label-trade-cargo-bay-three
   - uid: 3696
     components:
     - type: Transform
       pos: 14.5,-25.5
       parent: 1
     - type: Docking
-      name: CB3
+      name: dock-label-trade-cargo-bay-three
   - uid: 3697
     components:
     - type: Transform
       pos: 15.5,-25.5
       parent: 1
     - type: Docking
-      name: CB3
+      name: dock-label-trade-cargo-bay-three
   - uid: 3698
     components:
     - type: Transform
@@ -3557,7 +3561,7 @@ entities:
       pos: -15.5,25.5
       parent: 1
     - type: Docking
-      name: D5
+      name: dock-label-trade-five
   - uid: 3699
     components:
     - type: Transform
@@ -3565,7 +3569,7 @@ entities:
       pos: -14.5,25.5
       parent: 1
     - type: Docking
-      name: D5
+      name: dock-label-trade-five
   - uid: 3700
     components:
     - type: Transform
@@ -3573,7 +3577,7 @@ entities:
       pos: -13.5,25.5
       parent: 1
     - type: Docking
-      name: D5
+      name: dock-label-trade-five
   - uid: 3701
     components:
     - type: Transform
@@ -3581,7 +3585,7 @@ entities:
       pos: -31.5,3.5
       parent: 1
     - type: Docking
-      name: CB4
+      name: dock-label-trade-cargo-bay-four
   - uid: 3702
     components:
     - type: Transform
@@ -3589,7 +3593,7 @@ entities:
       pos: -31.5,2.5
       parent: 1
     - type: Docking
-      name: CB4
+      name: dock-label-trade-cargo-bay-four
   - uid: 3703
     components:
     - type: Transform
@@ -3597,7 +3601,7 @@ entities:
       pos: -31.5,1.5
       parent: 1
     - type: Docking
-      name: CB4
+      name: dock-label-trade-cargo-bay-four
 - proto: AirlockMaint
   entities:
   - uid: 1282
