--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Boxes/nfsd.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Boxes/nfsd.yml
@@ -12,7 +12,7 @@
 - type: entity
   name: tracking darts box
   parent: BoxMagazine
-  id: BoxTrackingDartsAmmo
+  id: NFBoxMagazineDartsTracking
   description: A box of tracking darts.
   components:
   - type: StorageFill
