--- a/Resources/Prototypes/_NF/Entities/Structures/Walls/asteroid.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Walls/asteroid.yml
@@ -291,7 +291,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileCoal
@@ -324,7 +324,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileGold
@@ -357,7 +357,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileDiamond
@@ -390,7 +390,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPilePlasma
@@ -423,7 +423,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileQuartz
@@ -456,7 +456,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileSilver
@@ -489,7 +489,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileIron
@@ -522,7 +522,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileUranium
@@ -555,7 +555,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileBananium
@@ -588,7 +588,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileSalt
@@ -621,7 +621,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileArtifactFragment
@@ -654,7 +654,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: WallRockScrapPileBluespace
@@ -686,7 +686,7 @@
   components:
   - type: OreVein
     oreChance: 1.0
-    currentOre: AsteroidScrapBotSpawner
+    currentOre: OreScrapBot
 
 - type: entity
   id: AsteroidScrapPileMining
